--- a/src/Sidio.Functions.Worker.ServiceBus/Sidio.Functions.Worker.ServiceBus.csproj
+++ b/src/Sidio.Functions.Worker.ServiceBus/Sidio.Functions.Worker.ServiceBus.csproj
@@ -18,6 +18,10 @@
         <Deterministic>true</Deterministic>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="Microsoft.Azure.Functions.Worker.Core" Version="1.18.0" />
       <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.ServiceBus" Version="5.18.0" />
