--- a/src/Sidio.Functions.Worker.ServiceBus/Sidio.Functions.Worker.ServiceBus.csproj
+++ b/src/Sidio.Functions.Worker.ServiceBus/Sidio.Functions.Worker.ServiceBus.csproj
@@ -7,7 +7,6 @@
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
         <Authors>Marthijn van den Heuvel,Sidio</Authors>
         <PackageId>Sidio.Functions.Worker.ServiceBus</PackageId>
-        <RepositoryUrl>https://github.com/marthijn/Sidio.Functions.Worker.ServiceBus</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -16,15 +15,17 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <Deterministic>true</Deterministic>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
     </PropertyGroup>
-
-    <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
-        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-    </PropertyGroup>
-
+    
     <ItemGroup>
       <PackageReference Include="Microsoft.Azure.Functions.Worker.Core" Version="1.18.0" />
       <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.ServiceBus" Version="5.20.0" />
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
